tests/core/data/csl/InterfaceTests/InvalidDeclarations/invalidFieldName.csl
/*
	Invalid Field name that starts with Uppercase
 */
interface invalidFieldName
{
	readonly 
			string Name;
};


